deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threat-response-agent
  namespace: rhn-sa-jwesterl-dev
  labels:
    app: threat-response-agent
spec:
  selector:
    app: threat-response-agent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
